workspace = { members = ["engine-tester"] }
[package]
name = "ashen_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
gl = "0.14.0"
glfw = "0.52.0"
glm = "0.2.3"
image = "0.25.1"
log = "0.4.21"
thiserror = "1.0.59"
